<resources>
    <string name="app_name">互帮有赏</string>

    <!--首页底部-->
    <string name="string_help">互帮</string>
    <string name="string_integration">积分</string>
    <string name="string_benefit">获益</string>
    <string name="string_consumption">消费</string>
    <string name="string_my">我的</string>

    <!--搜索-->
    <string name="string_search_hint">搜索关键字广告</string>

    <string name="string_please_login">请先登录</string>
    <string name="string_login">登录</string>

    <!--首页 积分-->
    <string name="string_watch_point_praise">看完点赞</string>
    <string name="string_group_buying">加群购买</string>

    <!--商城 看广告-->
    <string name="string_watch_ad">看广告</string>
    <string name="string_search_like_ad">搜索关键字相关商品</string>

    <!--个人中心 我的获赏，我的求助-->
    <string name="string_comment">跟帖</string>
    <string name="string_replies">回帖</string>
    <string name="string_posted">发帖</string>
    <!--个人中心 我的收藏-->
    <string name="string_post">帖子</string>
    <string name="string_goods">商品</string>
    <string name="string_store">店铺</string>
    <string name="string_remove">删除</string>
    <!--个人中心  我的账户-->
    <string name="string_all">全部</string>
    <string name="string_expenditure">支出</string>
    <string name="string_support">收入</string>

    <string name="string_weishiyong">未使用</string>
    <string name="string_yishiyong">已使用</string>
    <string name="string_yiguoqi">已过期</string>

    <!-- 交易大厅 -->
    <string name="string_meoney_from_high_to_low">面额从高到低</string>
    <string name="string_meoney_from_low_to_high">面额从低到高</string>

    <!--个人中心  我的订单-->
    <string name="string_my_order_title">我的订单</string>
    <string name="string_all_order">全部订单</string>
    <string name="string_stay_payment">待付款</string>
    <string name="string_stay_goods_receipt">待收货</string>
    <string name="string_stay_evaluate">待评价</string>
    <string name="string_refund">退款/退货</string>
    <string name="string_order_details">订单详情</string>

    <string name="string_order_evaluate_title">发表评价</string>
    <string name="string_order_complaints_merchant_title">投诉商家</string>

    <!--消息中心-->
    <string name="msgcenter_lable1">帖子动态</string>
    <string name="msgcenter_lable2">交易信息</string>
    <string name="msgcenter_lable3">投诉信息</string>
    <string name="msgcenter_lable4">系统消息</string>
    <string name="msgcenter_lable5">账户消息</string>

    <!--交易信息-->
    <string name="trade_lable1">交易信息</string>
    <string name="trade_lable2">订单编号：</string>

    <!--互帮-->
    <string name="help_lable1">筛选</string>
    <string name="help_lable2">请输入关键词搜索相关帖子</string>
    <string name="help_lable3">求助</string>
    <string name="help_lable4">获赏</string>
    <string name="help_lable5">投票</string>

    <!--筛选-->
    <string name="fileter_lable1">筛选</string>
    <string name="fileter_lable2">当前：</string>
    <string name="fileter_lable3">国内热门城市</string>
    <string name="fileter_lable4">帖子归属种类</string>

    <!--发布帖子-->
    <string name="release_lable1">发布帖子</string>
    <string name="release_lable2">请选择帖子的类型</string>
    <string name="release_lable3">求助</string>
    <string name="release_lable4">获赏</string>
    <string name="release_lable5">帖子标题</string>
    <string name="release_lable6">可见地区</string>
    <string name="release_lable7">帖子种类</string>
    <string name="release_lable8">有效时间</string>
    <string name="release_lable9">悬赏分\t\t</string>
    <string name="release_lable10">帖子内容</string>
    <string name="release_hint1">请输入帖子标题，30字以内</string>
    <string name="release_hint2">请选择帖子可见地区</string>
    <string name="release_hint3">请选择帖子所属种类</string>
    <string name="release_hint4">请选择帖子有效时间</string>
    <string name="release_hint5">请设置悬赏分，至少10分</string>
    <string name="release_hint6">请输入帖子内容，400字以内</string>
    <string name="release_hint7">还可上传（4）张</string>
    <string name="release_hint8">请填写可以帮助别人的资源信息，400字以内</string>
    <string name="release_hint9">帮助后得到10分，可向跟帖人索要更多</string>

    <string name="string_search_relative_goods">搜索关键字相关商品</string>
    <string name="string_search_relative_store">搜索关键字相关店铺</string>

    <string name="string_whether_success_join_group">已成功加入商家群，是否进入?</string>
    <string name="string_whether_enter_group">是否进入商家群?</string>

    <string name="string_help_points">帮赏分</string>
    <string name="string_coupon_points">优惠劵</string>

    <!--我的求助-->
    <string name="string_my_help_title">我的求助</string>
    
    <!--我的获赏-->
    <string name="string_my_help_reward">我的获赏</string>
    <!--我的投票-->
    <string name="string_my_vote_title">我的投票</string>
    <!--我的收藏-->
    <string name="string_my_collection_title">我的收藏</string>
    <string name="string_my_clean">清空</string>
    <string name="string_offer_reward">悬赏</string>
    <string name="string_reward">获赏</string>
    <!--我的分享-->
    <string name="string_my_share_title">我的分享</string>

    <!--设置-->
    <string name="string_setting_title">设置</string>

    <!--账户管理-->
    <string name="string_account_manager_title">账户管理</string>
    <!--个人信息-->
    <string name="string_person_info_title">个人信息</string>
    <!--实名认证-->
    <string name="string_certification_title">实名认证</string>
    <!--验证身份-->
    <string name="string_verifyidentity_title">验证身份</string>
    <!--修改密码-->
    <string name="string_pwd_update_title">修改密码</string>
    <!--支付密码-->
    <string name="string_pwd_payment_title">支付密码</string>
    <!--地址管理-->
    <string name="string_address_manager_title">地址管理</string>
    <!--添加地址-->
    <string name="string_add_address_title">添加地址</string>
    <string name="string_zero_pay">0元支付请点击完成</string>
    <!--关于-->
    <string name="string_about_title">关于</string>
    <!--意见反馈-->
    <string name="string_feedback_title">意见反馈</string>
    <!--帮助中心-->
    <string name="string_help_center_title">帮助中心</string>
    <!--注册-->
    <string name="string_register_title">注册</string>
    <string name="string_recapture">重新获取</string>
    <!--忘记密码-->
    <string name="string_forget_pwd_title">忘记密码</string>
    <string name="string_reset_pwd_title">重置密码</string>
    <!--修改密码-->
    <string name="string_update_title">修改密码</string>
    <string name="string_identity_title">认证身份</string>

    <!--选择兑换方式-->
    <string name="string_xuanzeduihuanfangshi_title">选择兑换方式</string>
    <!--余额兑换帮赏分-->
    <string name="string_yue_duihuan_bangshangfen_title">余额兑换帮赏分</string>
    <!--帮赏分兑换通用卷-->
    <string name="string_bangshangfen_duihuan_tongyongjuan_title">帮赏分兑换通用劵</string>
    <!--余额兑换通用卷-->
    <string name="string_yue_duihuan_tongyongjuan_title">余额兑换通用劵</string>
    <!--充值余额-->
    <string name="string_chongzhi_yue_title">充值余额</string>

    <!--支付-->
    <string name="pay_lable1">选择支付方式</string>
    <string name="pay_lable2">订单金额</string>
    <string name="pay_lable3">微信</string>
    <string name="pay_lable4">支付宝</string>
    <string name="pay_lable5">银联</string>
    <string name="pay_lable6">支付方式：</string>
    <string name="pay_lable7">支付金额：</string>
    <string name="pay_lable8">查看订单</string>
    <string name="pay_lable9">回首页</string>
    <string name="pay_lable10">继续购物</string>

    <!--商城-->
    <string name="shop_cart">购物车</string>
    <string name="shop_lable1">我的账户</string>
    <string name="shop_lable2">我的订单</string>
    <string name="shop_lable3">优惠券</string>
    <string name="shop_lable4">分类</string>
    <string name="shop_lable5">推荐店铺</string>
    <string name="shop_lable6">热门商品</string>
    <string name="string_search_al_shop">搜索关键字相关商品</string>
    <string name="string_error">获取数据失败</string>

    <!--店铺-->
    <string name="shop_lable11">搜索店铺内的宝贝</string>
    <string name="shop_lable12">收藏</string>
    <string name="shop_lable13">销量排行</string>
    <string name="shop_lable14">店铺推荐</string>
    <string name="shop_lable15">综合</string>
    <string name="shop_lable16">销量</string>
    <string name="shop_lable17">价格</string>
    <string name="shop_lable18">首页</string>
    <string name="shop_lable19">全部商品</string>
    <string name="shop_lable20">上新</string>

    <!--商品详情-->
    <string name="good_lable1">店铺</string>
    <string name="good_lable2">商家群</string>
    <string name="good_lable3">收藏</string>
    <string name="good_lable4">加入购物车</string>
    <string name="good_lable5">立即购买</string>
    <string name="good_lable6">正品保证</string>
    <string name="good_lable7">7天无理由退货</string>
    <string name="good_lable8">极速退款</string>
    <string name="good_lable9">优惠券交易</string>
    <string name="good_lable10">选择颜色分类尺码</string>
    <string name="good_lable11">描述相符</string>
    <string name="good_lable12">服务态度</string>
    <string name="good_lable13">发货速度</string>
    <string name="good_lable14">商品</string>
    <string name="good_lable15">详情</string>
    <string name="good_lable16">评价</string>
    <string name="good_lable17">请选择商品数量</string>

    <!--弹窗-->
    <string name="string_system_prompt">系统提示</string>
    <string name="string_watch_ad_get_scroe">恭喜您获得5帮赏分</string>
    <string name="num_dialog_show">购买数量</string>
    <string name="canclebtn">取消</string>
    <string name="surebtn">确定</string>

    <string name="string_available_coupon">可用优惠劵</string>
    <string name="string_not_available_coupon">不可用优惠劵</string>

    <!--通用劵-->
    <string name="string_general_volume">通用劵</string>
    <string name="string_general_volume_acount">通用劵账户</string>

    <string name="string_get_voucher_loggin">请登录后再领取</string>

    <!--微信-->
    <string name="app_back">返回</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_continue">继续</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_set">设置</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>

    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>

    <drawable name="string_watch_ad_group_bug_normal">#ec6a5c</drawable>
    <drawable name="string_watch_ad_group_bug_pressed">#af4034</drawable>

    <drawable name="string_warch_ad_group_bug_text_normal">#ffffff</drawable>
    <drawable name="string_warch_ad_group_bug_text_pressed">#af4034</drawable>

</resources>
