<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_allbg"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_while"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_35"
            android:src="@mipmap/pass" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                style="@style/style_text_lable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="right"
                android:text="@string/pay_lable6" />

            <TextView
                android:id="@+id/tv_payend_type"
                style="@style/style_text_lable_red"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:paddingLeft="@dimen/layout_margin"
                android:text="@string/pay_lable4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:orientation="horizontal">

            <TextView
                style="@style/style_text_lable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="right"
                android:text="@string/pay_lable7" />

            <TextView
                android:id="@+id/tv_payend_money"
                style="@style/style_text_lable_red"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:paddingLeft="@dimen/layout_margin"
                android:text="￥200" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_payend_seeorder"
                style="@style/style_text_lable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight="1.0"
                android:background="@drawable/bg_pay_btn"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/pay_lable8" />

            <TextView
                android:id="@+id/tv_payend_gohome"
                style="@style/style_text_lable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1.0"
                android:background="@drawable/bg_pay_btn"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/pay_lable9" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_spiline" />

    <TextView
        style="@style/style_text_lable"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40"
        android:background="#f8f8f8"
        android:gravity="center"
        android:text="@string/pay_lable10" />
</LinearLayout>