<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_allbg"
    android:orientation="vertical">
    <include layout="@layout/layout_title"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_44"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        style="@style/style_text_lable"
        android:text="@string/release_lable2"
        />
    <TextView
        android:id="@+id/tv_release_help"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_44"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:drawableRight="@mipmap/img_disclosure_arrow"
        android:background="@drawable/bg_msgcenter_item"
        android:gravity="center_vertical"
        style="@style/style_text_lable"
        android:text="@string/release_lable3"
        />

    <TextView
        android:id="@+id/tv_release_rewards"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_44"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:drawableRight="@mipmap/img_disclosure_arrow"
        android:background="@drawable/bg_msgcenter_item"
        android:gravity="center_vertical"
        style="@style/style_text_lable"
        android:text="@string/release_lable4"
        />
</LinearLayout>